------------------- Upcoming version 9.0 -----------------------------

Features and improvements:

User tools and API improvements and changes:

- The 'xnonblock' option of SCOREP_MPI_ENABLE_GROUPS is deprecated.
  Measurements always record extended non-blocking events.
- The `scorep` tool now also provides the Git revision via the
  `--revision` flag, similar to `scorep-config`.
- Add a filter generation option to `scorep-score`, that generates a
  maximal filter including all filterable regions. This serves as
  starting point for a fully manual approach without the need to
  copy and paste from the default output.

Compatibility:

- The usage of POMP user instrumentation, aka `#pragma pomp ...`, is
  deprecated. Use the `SCOREP_USER_*` macros instead.
- Non-LLVM based CCE compilers are no longer supported. Please upgrade.
- Added the environment variable `NVCC` to change the compiler
  command used for checking the NVIDIA CUDA compiler during configure.

Bugfixes:
- Fix crash when issuing multiple consecutive split collective IO operations on
  the same file handle.

------------------- Released version 8.3 -----------------------------

Bugfixes:

- Fix abort in OMPT adapter for OpenMP loops if runtime supports
  reporting loop schedules.
- Fix 'inconsistent profile' abort in OMPT adapter seen with NVHPC and
  nested OpenMP parallel region where the outer parallel region uses a
  single thread only.

------------------- Released version 8.2 -----------------------------

Features and improvements:

- The OMPT adapter is now able to report the schedule type selected
  in OpenMP loops. However, this needs to be supported by the runtime.
- Communicators created with one of the procedures added in MPI 4.0 are now
  properly tracked by Score-P.

Compatibility:

- The HIP adapter requires the ROCm SMI library.
- Score-P now requires CubeW and CubeLib in version 4.8.2.

Bugfixes:

- The OpenMP detection now additionally checks for the `-fiopenmp` flag